--- a/404.html
+++ b/404.html
@@ -619,7 +619,7 @@
         var gitment = new Gitmint({
             id: window.location.pathname, 
             owner: 'quintushorace',
-            repo: 'quintushorace.github.io/blog',
+            repo: 'blog',
             
             lang: "" || navigator.language || navigator.systemLanguage || navigator.userLanguage,
             
