--- a/index.html
+++ b/index.html
@@ -3595,6 +3595,8 @@ Hello, Justin
   
 
 
+  
+
 
 
 
@@ -3633,6 +3635,11 @@ Hello, Justin
   
   
     <script type="text/javascript" src="/blog/lib/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+  
+
+  
+  
+    <script type="text/javascript" src="/blog/lib/canvas-nest/canvas-nest.min.js"></script>
   
 
 
@@ -3730,6 +3737,11 @@ Hello, Justin
 
   
 
+  
+
+
+  
+    <script type="text/javascript" src="//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js"></script>
   
 
 </body>
